--- a/BalancoMensal/app/src/main/res/values/strings.xml
+++ b/BalancoMensal/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">BalancoMensal</string>
+    <string-array name="category">
+        <item id="0">Escolha uma categoria</item>
+        <item id="1">Alimentação</item>
+        <item id="2">Moradia</item>
+        <item id="3">Lazer</item>
+        <item id="4">Transporte</item>
+        <item id="5">Compras</item>
+        <item id="6">Outros Gastos</item>
+    </string-array>
 </resources>
