--- a/BalancoMensal/app/src/main/res/values/strings.xml
+++ b/BalancoMensal/app/src/main/res/values/strings.xml
@@ -8,9 +8,10 @@
         <item id="4">Transporte</item>
         <item id="5">Compras</item>
         <item id="6">Outros Gastos</item>
-        <item id="-1"></item>
     </string-array>
-
+    <string-array name ="nulo">
+        <item id="0"></item>
+    </string-array>
     <string name = "desp_fixa">Despesa Fixa</string>
     <string name = "rend_fixa">Renda Fixa</string>
 </resources>
